# BitFlags

./: Cargo.toml  README.md
benches/: my_bench.rs
src/: bitflagable.rs  lib.rs
