[package]
name = "bitflags"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", default_features = false, optional = true }

[features]
default = []
with_serde = ["serde"]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "my_bench"
harness = false
